Add SCSS compile

--- a/views/layout.html
+++ b/views/layout.html
@@ -3,6 +3,7 @@
 <head>
   <title>Splore</title>
   <meta charset="utf8">
+  <link rel="stylesheet" type="text/css" href="/css/master.css">
 </head>
 <body>
   {% block content %}{% endblock %}
