--- a/views/index.html
+++ b/views/index.html
@@ -1,5 +1,19 @@
 {% extends 'layout.html' %}
 
 {% block content %}
-<p>Hello !</p>
+  
+  <div class="wrapper">
+    <h1>Splore</h1>
+    <p>
+      Explore new music<br>
+      based on the world around you.
+    </p>
+  </div>
+
+  <a href="#" class="btn btn--banner">Start sploring</a>
+
+  <div class="wrapper">
+    <p><small>We’ll log you in with your Spotify account.</small></p>
+  </div>
+
 {% endblock %}
