--- a/views/layout.html
+++ b/views/layout.html
@@ -3,7 +3,10 @@
 <head>
   <title>Splore</title>
   <meta charset="utf8">
+  <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="/css/master.css">
+
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
   {% block content %}{% endblock %}
