Add connection to the Android device

--- a/views/playlist.html
+++ b/views/playlist.html
@@ -7,11 +7,12 @@
   </div>
 
   <a href="#" class="btn btn--banner">Enjoy at Spotify</a>
+ 
 
   <script type="text/javascript">
     // if('Android' in window) {
-      // var id = Android.getId();
-      var id = 'tomassellden';
+      var id = Android.getID();
+      Android.startLocationService();
       var username = '{{ username }}';
       var http = new XMLHttpRequest();
 
@@ -20,6 +21,7 @@
       http.open('POST', '/users/' + username + '/setPhoneId', true);
       http.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
       http.send(params);
+
     // }
   </script>
 {% endblock %}
